<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigation_frame">>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="186dp"
                android:layout_height="179dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/mascot" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/text_block"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/statistica_intro"
                android:textColor="@color/c7"
                android:textSize="14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button5"
                    android:layout_width="135dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/c4"
                    android:text="@string/button2"
                    android:textColor="@color/c7"
                    android:textSize="14sp"
                    app:cornerRadius="15dp" />



                <Button
                    android:id="@+id/button3"
                    android:layout_width="135dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/c4"
                    android:onClick="buttonClick"
                    android:text="@string/button1"
                    android:textColor="@color/c7"
                    android:textSize="14sp"
                    app:cornerRadius="15dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_block3"
                android:layout_gravity="end"
                android:gravity="center"
                android:maxLength="30"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text=""
                android:textColor="@color/c7"
                android:textSize="14sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_block"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/statistica1"
                android:textColor="@color/c7"
                android:textSize="14sp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_block3"
                android:layout_gravity="end"
                android:gravity="center"
                android:maxLength="30"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text=""
                android:textColor="@color/c7"
                android:textSize="14sp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_block"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/sovety_intro"
                android:textColor="@color/c7"
                android:textSize="14sp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn1"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/c4"
                    android:text="1"
                    android:textColor="@color/c7"
                    android:textSize="14sp"
                    app:cornerRadius="15dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/c4"
                    android:text="2"
                    android:textColor="@color/c7"
                    android:textSize="14sp"
                    app:cornerRadius="15dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/c4"
                    android:text="3"
                    android:textColor="@color/c7"
                    android:textSize="14sp"
                    app:cornerRadius="15dp"
                    android:visibility="gone"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_block3"
                android:layout_gravity="end"
                android:gravity="center"
                android:maxLength="30"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:text="Текст"
                android:textColor="@color/c7"
                android:textSize="14sp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/text_block"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/sovety_intro"
                android:textColor="@color/c7"
                android:textSize="14sp"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

    <!-- Навигационная панель -->
    <FrameLayout
        android:id="@+id/navigation_frame"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true">

        <!-- Фон навигации -->
        <ImageView
            android:id="@+id/navigation_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/back" />

        <!-- Кнопки навигации -->
        <Button
            android:id="@+id/nav_button_chat"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:contentDescription=""
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/nav_button_home"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription=""
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/nav_button_mero"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="300dp"
            android:contentDescription=""
            android:background="@android:color/transparent" />
    </FrameLayout>


</RelativeLayout>

